<resources>
    <string name="app_name">DiaryApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="desc_add_diary_item">Add diary item</string>
    <string name="date">15/03/22</string>
    <string name="header">Header</string>
    <string name="text">Text</string>
    <string name="desc_delete">Delete</string>
    <string name="add_title">Add title</string>
    <string name="write_something">Write something...</string>
    <string name="save">save</string>
    <string name="choose_a_date">Choose a date</string>
</resources>